[gd_scene load_steps=11 format=2]

[ext_resource path="res://GFX/Enemies/spikeMan_walk1.png" type="Texture" id=1]
[ext_resource path="res://GFX/Enemies/spikeMan_walk2.png" type="Texture" id=2]
[ext_resource path="res://GFX/Enemies/Spike_guy.gd" type="Script" id=3]
[ext_resource path="res://GFX/Enemies/spikeMan_jump.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 39, 48.5 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 23.0
height = 22.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44.5, 36 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("walking:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("walking:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("walking:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.8 ) ]
}

[node name="Spike_guy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )

[node name="walking" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 26.5 )
shape = SubResource( 2 )

[node name="Floorcheck" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 86 )
collision_mask = 2

[node name="Top_checker" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_checker"]
position = Vector2( -1, -50 )
shape = SubResource( 3 )

[node name="Side_cheker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side_cheker"]
position = Vector2( -2.5, 30 )
shape = SubResource( 4 )

[node name="AnimationEnemy" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/dead = SubResource( 6 )

[connection signal="body_entered" from="Top_checker" to="." method="_on_Top_checker_body_entered"]
[connection signal="body_entered" from="Side_cheker" to="." method="_on_Side_cheker_body_entered"]
[connection signal="animation_finished" from="AnimationEnemy" to="." method="_on_AnimationEnemy_animation_finished"]
